[package]
name = "bitvec"
version = "0.6.0-e2018"
authors = [
	"myrrlyn <myrrlyn@outlook.com>",
]
description = "A crate for manipulating memory, bit by bit"
documentation = "https://docs.rs/bitvec"
homepage = "https://myrrlyn.net/bitvec"
license-file = "LICENSE.txt"
repository = "https://github.com/myrrlyn/bitvec"
edition = "2018"

[dependencies]
